--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width initial-scale=1">
-<link rel="manifest" href="manifest.json">
+
 <title>Trade Feasibility Checker</title>
-<link rel="stylesheet" href="style.css">
+
+<link rel="stylesheet" href="/Trade-checkpoints/style.css">
+<link rel="manifest" href="/Trade-checkpoints/manifest.json">
+
 </head>
 
 <body>
@@ -45,7 +48,7 @@
 
 </div>
 
-<script src="script.js"></script>
+<script src="/Trade-checkpoints/script.js"></script>
 
 </body>
 </html>
