--- a/index.html
+++ b/index.html
@@ -25,21 +25,21 @@
 <!-- CALL RULES -->
 <div id="callBox" class="box">
 <h3>CALL CONDITIONS</h3>
-
-<p id="c1">Price forms lower high or support with V recovery ❌</p>
-<p id="c2">Two strong green candles closing above previous high ❌</p>
-<p id="c3">Upper swing breaks previous swing high ❌</p>
-<p id="c4">Price trades above second candle high ❌</p>
+<p id="c1" onclick="toggleRule('c1',0)">Price forms lower high or support with V recovery ❌</p>
+<p id="c2" onclick="toggleRule('c2',1)">Two strong green candles closing above previous high ❌</p>
+<p id="c3" onclick="toggleRule('c3',2)">Upper swing breaks previous swing high ❌</p>
+<p id="c4" onclick="toggleRule('c4',3)">Price trades above second candle high ❌</p>
 </div>
 
 <!-- PUT RULES -->
 <div id="putBox" class="box" style="display:none">
 <h3>PUT CONDITIONS</h3>
-
-<p id="p1">Price forms higher low or resistance with V fall ❌</p>
-<p id="p2">Two strong red candles closing below previous low ❌</p>
-<p id="p3">Lower swing breaks previous swing low ❌</p>
-<p id="p4">Price trades below second candle low ❌</p>
+  
+<p id="p1" onclick="toggleRule('p1',0)">Price forms higher low or resistance with V fall ❌</p>
+<p id="p2" onclick="toggleRule('p2',1)">Two strong red candles closing below previous low ❌</p>
+<p id="p3" onclick="toggleRule('p3',2)">Lower swing breaks previous swing low ❌</p>
+<p id="p4" onclick="toggleRule('p4',3)">Price trades below second candle low ❌</p>
+  
 </div>
 
 <h2 id="final">NO TRADE</h2>
